Bug 1720232 SQLite calls could timeout in starvation situations.

Some of our servers could cause random failures when trying to generate many key pairs from multiple threads. This is caused because some threads would starve long enough for them to give up on getting a begin transaction on sqlite. sqlite only allows one transaction at a time.

Also, there were some bugs in error handling of the broken transaction case where NSS would try to cancel a transation after the begin failed (most cases were correct, but one case in particular was problematic).

Differential Revision: https://phabricator.services.mozilla.com/D120032

--HG--
extra : rebase_source : 63bd904dee5c0c7f12c24a7edb47cd3685cb4d7d