lib/softoken/sdb.c
@@ -82,12 +82,12 @@ typedef enum {
  * total wait time for automatic operations:
  *   1 second (SDB_SQLITE_BUSY_TIMEOUT/1000).
  * total wait time for manual operations:
- *   (1 second + 5 seconds) * 10 = 60 seconds.
+ *   (1 second + SDB_BUSY_RETRY_TIME) * 30 = 30 seconds.
  * (SDB_SQLITE_BUSY_TIMEOUT/1000 + SDB_BUSY_RETRY_TIME)*SDB_MAX_BUSY_RETRIES
  */
 #define SDB_SQLITE_BUSY_TIMEOUT 1000 /* milliseconds */
-#define SDB_BUSY_RETRY_TIME 5        /* seconds */
-#define SDB_MAX_BUSY_RETRIES 10
+#define SDB_BUSY_RETRY_TIME 5        /* 'ticks', varies by platforms */
+#define SDB_MAX_BUSY_RETRIES 30
 
 /*
  * known attributes
@@ -1001,6 +1001,7 @@ sdb_GetValidAttributeValueNoLock(SDB *sdb, CK_OBJECT_HANDLE object_id,
             found = 1;
         }
     } while (!sdb_done(sqlerr, &retry));
+
     sqlite3_reset(stmt);
     sqlite3_finalize(stmt);
     stmt = NULL;
@@ -1524,6 +1525,8 @@ sdb_Begin(SDB *sdb)
         if (sqlerr == SQLITE_BUSY) {
             PR_Sleep(SDB_BUSY_RETRY_TIME);
         }
+        /* don't retry BEGIN transaction*/
+        retry = 0;
     } while (!sdb_done(sqlerr, &retry));
 
     if (stmt) {
@@ -2261,6 +2264,7 @@ sdb_init(char *dbname, char *table, sdbDataType type, int *inUpdate,
                 }
             }
         } while (!sdb_done(sqlerr, &retry));
+
         if (sqlerr != SQLITE_DONE) {
             goto loser;
         }
